[workspace]
members = ["game_core"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "code-and-conquer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
game_core = { version = "0.1.0", path = "game_core" }
postgres-syntax = "0.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.7.0", features = ["runtime-tokio", "postgres", "chrono"] }
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.1"
thiserror = "1.0.40"
tokio = { version = "1.21.2", features = ["full"] }

[dev-dependencies]
rstest = "0.17.0"
speculoos = "0.11.0"
