[package]
name = "tests_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
game_core = { version = "0.1.0", path = "../game_core" }
sqlx = { version = "0.7.0", features = ["runtime-tokio", "postgres", "chrono"] }


[dev-dependencies]
rstest = "0.17.0"
tokio = { version = "1.21.2", features = ["test-util"] }
chrono = { version = "0.4.26", features = ["serde"] }
